sanger/sites/cytokines/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cytokines-resting
  labels:
    app: cytokines-resting
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cytokines-resting
---
apiVersion: v1
kind: Service
metadata:
  name: cytokines-simulated
  labels:
    app: cytokines-simulated
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: cytokines-simulated
---
apiVersion: v1
kind: Service
metadata:
  name: cytokines-app
  labels:
    app: cytokines-app
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: shiny
  selector:
    app: cytokines-app
